[package]
name = "md-rs"
version = "0.1.0"
edition = "2024"
authors = ["Janusz Piechówka"]
repository = "https://github.com/jpiechowka/md-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
lto = true
strip = true

[dependencies]
proptest = "1.6.0"
